--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h2 class="nombre-empresa">Star Wars</h2>
         </a>
         <nav id="nav-flotante">
+            <hr>
             <a href="#bandos">Bandos</a>
             <a href="#protagonistas">Personajes Principales</a>
             <a href="#peliculas">Peliculas</a>
@@ -22,6 +23,8 @@
     </header>
 
     <section id="bandos">
+        <h1>Bandos</h1>
+        <br>
             <h3>El Imperio</h3>
             <p>Un nuevo gobierno se ha hecho con el control de la Galaxia y se ha cargado la República a base de fuerza y tiranía. Utilizan el lado oscuro de la Fuerza para conseguir lo que quieren y mantener sometida a la Galaxia. A grandes rasgos, son los malos.</p>
             <h3>Los rebeldes</h3>
@@ -35,31 +38,35 @@
     </section>
 
     <section id="protagonistas">
-        <h3>Anakin Skywalker/Darth Vader</h3>
-        <p>Aunque Anakin comienza a entrenar para convertirse en Jedi, termina pasándose al Lado Oscuro y cambia su nombre por Darth Vader. Es quien lidera la lucha contra los rebeldes como mano derecha del Emperador.</p>
-        <h3>Luke Skywalker</h3>
-        <p>Hijo de Darth Vader, aunque eso no lo descubre hasta que pelea contra él. Criado por sus tíos, se une a los Rebeldes en la lucha contra el Imperio y se convierte en Jedi.</p>
-        <h3>Obi-Wan Kenobi</h3>
-        <p>Legendario Maestro Jedi que luchó y ayudó a los rebeldes a destruir la Estrella de la Muerte, la nave del Imperio. En su juventud, comenzó a entrenar a Anakin antes de que éste se convirtiera en Darth Vader. Más tarde es el maestro de Luke.</p>
-        <h3>Princesa Padmé Amidala</h3>
-        <p>Princesa a la que los Jedi ayudan a huir de un bloqueo económico de su planeta. Más tarde se casa con Anakin, antes de que éste se convirtiera en Darth Vader. Muere tras dar a luz a sus dos hijos: Luke y Leia.</p>
-        <h3>Princesa Leia</h3>
-        <p>Hija de Darth Vader y la princesa Amidala, hermana de Luke, pero como éste, no se entera de ello hasta pasados los años. Se une a la Alianza Rebelde para luchar en primera línea contra la tiranía del Imperio y restaurar la paz.</p>
-        <h3>Han Solo</h3>
-        <p>Un contrabandista con una nave llamada “Halcón Milenario”, “la chatarra más rápida del Universo”. Se une a Luke y Obi-Wan en su misión de encontrar a la Princesa Leia, de quien se enamora, y también termina luchando por la causa de los rebeldes.</p>
-        <h3>Chewbacca</h3>
-        <p>Es el copiloto de Han Solo y su fiel compañero. Básicamente, es el que parece un Yeti, pero marrón. Es un Wookie, así que gruñe más que habla, pero también ayuda a los rebeldes.</p>
-        <h3>Yoda</h3>
-        <p>Uno de los más reconocidos Maestros Jedi y gran experto en la lucha de espadas laser. Es quien termina el entrenamiento de Luke para convertirse en Jedi.</p>
-        <h3>Emperador Palpatine</h3>
-        <p>El malo malísimo. Empieza como Canciller de la República pero toma el control y se impone como Emperador. Es el cerebro detrás de todo el Imperio y su objetivo es tener un control absoluto de la Galaxia y destruir la orden Jedi utilizando el lado oscuro de la Fuerza.</p>
-        <h3>R2-D2 y C-3PO</h3>
-        <p>Pareja de droides mecánico y de protocolo respectivamente que terminan en manos de Luke, al que consideran su amo. R2-D2 (el plateado y ruidoso) es el valiente y C-3PO (el dorado que no calla) el razonable, aunque ambos terminan siempre prestando ayuda a sus amos y a la causa rebelde.</p>
-        <h3>Stormtroopers</h3>
-        <p>Son los soldados imperiales. Vestidos de blanco y con las cabezas cubiertas por cascos, sirven al Imperio y se lían a tiros cuando es necesario.</p>
+        <h1>Protagonistas</h1>
+        <br>
+            <h3>Anakin Skywalker/Darth Vader</h3>
+            <p>Aunque Anakin comienza a entrenar para convertirse en Jedi, termina pasándose al Lado Oscuro y cambia su nombre por Darth Vader. Es quien lidera la lucha contra los rebeldes como mano derecha del Emperador.</p>
+            <h3>Luke Skywalker</h3>
+            <p>Hijo de Darth Vader, aunque eso no lo descubre hasta que pelea contra él. Criado por sus tíos, se une a los Rebeldes en la lucha contra el Imperio y se convierte en Jedi.</p>
+            <h3>Obi-Wan Kenobi</h3>
+            <p>Legendario Maestro Jedi que luchó y ayudó a los rebeldes a destruir la Estrella de la Muerte, la nave del Imperio. En su juventud, comenzó a entrenar a Anakin antes de que éste se convirtiera en Darth Vader. Más tarde es el maestro de Luke.</p>
+            <h3>Princesa Padmé Amidala</h3>
+            <p>Princesa a la que los Jedi ayudan a huir de un bloqueo económico de su planeta. Más tarde se casa con Anakin, antes de que éste se convirtiera en Darth Vader. Muere tras dar a luz a sus dos hijos: Luke y Leia.</p>
+            <h3>Princesa Leia</h3>
+            <p>Hija de Darth Vader y la princesa Amidala, hermana de Luke, pero como éste, no se entera de ello hasta pasados los años. Se une a la Alianza Rebelde para luchar en primera línea contra la tiranía del Imperio y restaurar la paz.</p>
+            <h3>Han Solo</h3>
+            <p>Un contrabandista con una nave llamada “Halcón Milenario”, “la chatarra más rápida del Universo”. Se une a Luke y Obi-Wan en su misión de encontrar a la Princesa Leia, de quien se enamora, y también termina luchando por la causa de los rebeldes.</p>
+            <h3>Chewbacca</h3>
+            <p>Es el copiloto de Han Solo y su fiel compañero. Básicamente, es el que parece un Yeti, pero marrón. Es un Wookie, así que gruñe más que habla, pero también ayuda a los rebeldes.</p>
+            <h3>Yoda</h3>
+            <p>Uno de los más reconocidos Maestros Jedi y gran experto en la lucha de espadas laser. Es quien termina el entrenamiento de Luke para convertirse en Jedi.</p>
+            <h3>Emperador Palpatine</h3>
+            <p>El malo malísimo. Empieza como Canciller de la República pero toma el control y se impone como Emperador. Es el cerebro detrás de todo el Imperio y su objetivo es tener un control absoluto de la Galaxia y destruir la orden Jedi utilizando el lado oscuro de la Fuerza.</p>
+            <h3>R2-D2 y C-3PO</h3>
+            <p>Pareja de droides mecánico y de protocolo respectivamente que terminan en manos de Luke, al que consideran su amo. R2-D2 (el plateado y ruidoso) es el valiente y C-3PO (el dorado que no calla) el razonable, aunque ambos terminan siempre prestando ayuda a sus amos y a la causa rebelde.</p>
+            <h3>Stormtroopers</h3>
+            <p>Son los soldados imperiales. Vestidos de blanco y con las cabezas cubiertas por cascos, sirven al Imperio y se lían a tiros cuando es necesario.</p>
+    </section>
 
     <section id="peliculas">
         <h1>Orden Cronologico de las peliculas</h1>
+        <br>
         <ol>
           <li>Episodio I: La amenaza fantasma</li>
           <li>Episodio II: El ataque de los clones</li>
@@ -75,13 +82,12 @@
         </ol>
         <img src="media/orden-cronologico.jpg" alt="">
     </section>
-    <section>
-        <footer>
-            <a href="https://github.com/strayzzz/claseHTML" class="logo-git" target="_blank" rel="noopener noreferrer">
-            <img src="media/logo-git.png" alt="">
-            </a>
-            <p>&copy Star Wars</p>
-        </footer>
-    </section>
+
+    <footer>
+        <a href="https://github.com/strayzzz/claseHTML" class="logo-git" target="_blank" rel="noopener noreferrer">
+        <img src="media/logo-git.png" alt="">
+        </a>
+        <p>&copy Star Wars</p>
+    </footer>
 </body>
 </html>
