--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </section>
 
     <footer>
-        <a href="https://github.com/strayzzz/claseHTML" class="logo-git" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/strayzzz/StarWars" class="logo-git" target="_blank" rel="noopener noreferrer">
         <img src="media/logo-git.png" alt="">
         </a>
         <p>&copy Star Wars</p>
