--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav id="nav-flotante">
             <hr>
             <a href="#bandos">Bandos</a>
-            <a href="#protagonistas">Personajes Principales</a>
+            <a href="#protagonistas">Personajes <br> Principales</a>
             <a href="#peliculas">Peliculas</a>
         </nav>
     </header>
